# cv_learning_notes

./: README.md
LVM/: README.md  clip.ipynb  clip_test.ipynb
LVM/dinov2/: dinov2_pca.ipynb
general_cnn/: README.md  alexnet.ipynb  densenet.ipynb  googlenet.ipynb  mobilenet.ipynb  resnet.ipynb  vgg.ipynb
general_pointcloud/: README.md
general_pointcloud/Pointnet&pointnet++/: test_classification.py  train_classification.ipynb  train_classification.py
general_pointcloud/aa6a1b54-7b33-43ff-be0d-424724ae58a1_Export-825ae61c-4e28-42ec-b59f-4fd8a4ef3d1e/: result of pointnet & pointnet++ 886dea1d341147fbadbac21b925bc3f8.md
general_pointcloud/result_of_pointnet++/: result_of_pointnet++.md
generative_model/: mnist_diffusion.py  mnist_sample.py
nerf/: README.md  tiny_nerf.ipynb
nerf/test-vanilla-nerf/: README.md  pyproject.toml
nerf/test-vanilla-nerf/test_nerf/: my_config.py  test_field.py  test_nerf_model.py  test_pipeline.py
rnn/: README.md  gru.ipynb  lstm.ipynb  rnn.ipynb
vision_transformer/: README.md  full_vit.ipynb  pretrained_vit.ipynb  simple_vit.ipynb  spatial_attention.ipynb  torch_vit.ipynb
